fixing images, making gallery scrollable on mobile

--- a/style.css
+++ b/style.css
@@ -23,16 +23,18 @@ body {
   text-align: center;
 }
 
-#gallery {
+#gallery-images {
   align-items: flex-start;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
   margin: 2%;
+  overflow-x: scroll;
 }
 
 .gallery-image {
-  height: auto;
+  border-radius: 10%;
+  height: 600px;
+  margin: 0 4px;
   padding: 4px 0;
   width: 100%;
 }
@@ -108,7 +110,7 @@ section:not(:nth-of-type(1)) {
 }
 
 #splash-image {
-  background-image: url("https://scontent-lhr8-1.cdninstagram.com/v/t51.2885-15/e35/p1080x1080/67776126_246041319693681_2180863265365323398_n.jpg?_nc_ht=scontent-lhr8-1.cdninstagram.com&_nc_cat=109&_nc_ohc=O3cUlxeVAmYAX9pCfGH&oh=999899c467d629b4c92ac309d5ebf28a&oe=5F70B423");
+  background-image: url("https://i.ibb.co/StK5ZGc/splash.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -161,13 +163,20 @@ strong {
     font-size: 20px;
   }
 
-  #gallery {
+  #gallery-images {
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
   }
 
   .gallery-image {
+    border-radius: 5%;
+    height: auto;
     padding: 4px;
+  }
+
+  .gallery-landscape {
+    width: 42%;
   }
 
   .gallery-square {
@@ -176,6 +185,10 @@ strong {
 
   .gallery-portrait {
     width: 22.3%;
+  }
+
+  .hide {
+    display: none;
   }
 
   h3 {
